test/files/neg/t1364.check
t1364.scala:9: error: incompatible type in overriding
type T <: AnyRef{type S[-U]} (defined in trait A);
 found   : AnyRef{type S[U] = U}
 required:  <: AnyRef{type S[-U]}
 type T = { type S[U] = U }
      ^
one error found
